--- a/kubernetes/waarp-r66-deployment.yaml
+++ b/kubernetes/waarp-r66-deployment.yaml
@@ -18,7 +18,10 @@ spec:
         - name: WAARP_APPNAME
           value: site1
         - name: WAARP_ADMIN_PASSWORD
-          value: V3ry1nS3cur3P4ssw0rd
+          valueFrom:
+            secretKeyRef:
+              name: waarp-r66-pass
+              key: waarp-r66.password.txt
         image: fjudith/waarp-r66:3.0.8
         name: waarp-r66
         ports:
