--- a/kubernetes/waarp-site1-log-persistentvolumeclaim.yaml
+++ b/kubernetes/waarp-site1-log-persistentvolumeclaim.yaml
@@ -4,13 +4,13 @@ metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: waarp-site1-log
+    type: local
   name: waarp-site1-log
 spec:
   accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+    - ReadWriteOnce
+  capacity:
+    storage: 100Mi
   hostPath:
-    path: /var/lib/docker/volumes/waarp-site1-log
+    path: "/var/lib/docker/volumes/waarp-site1-log"
 status: {}
