--- a/kubernetes/waarp-site1-db-persistentvolumeclaim.yaml
+++ b/kubernetes/waarp-site1-db-persistentvolumeclaim.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: PersistentVolume
 metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: waarp-site1-db
+    type: local
   name: waarp-site1-db
 spec:
   accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
+    - ReadWriteOnce
+  capacity:
+    storage: 100Mi
   hostPath:
-    path: /var/lib/docker/volumes/waarp-site1-db
+    path: "/var/lib/docker/volumes/waarp-site1-dblog"
 status: {}
