--- a/kubernetes/waarp-site1-db-persistentvolume.yaml
+++ b/kubernetes/waarp-site1-db-persistentvolume.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: PersistentVolume
 metadata:
   creationTimestamp: null
   labels:
     io.kompose.service: waarp-site1-db
+    type: local
   name: waarp-site1-db
 spec:
   accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 80Mi
+    - ReadWriteOnce
+  capacity:
+    storage: 100Mi
+  hostPath:
+    path: "/var/lib/docker/volumes/waarp-site1-db"
 status: {}
