--- a/kubernetes/waarp-site1-etc-persistentvolume.yaml
+++ b/kubernetes/waarp-site1-etc-persistentvolume.yaml
@@ -12,5 +12,5 @@ spec:
   capacity:
     storage: 100Mi
   hostPath:
-    path: "/var/lib/docker/volumes/waarp-site1-etc"
+    path: "/media/waarp-site1-etc"
 status: {}
