--- a/kubernetes/waarp-r66-deployment.yaml
+++ b/kubernetes/waarp-r66-deployment.yaml
@@ -1,3 +1,77 @@
+apiVersion: v1
+kind: Service
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: waarp-r66
+  name: waarp-r66
+spec:
+  ports:
+  - name: "6666"
+    port: 6666
+    targetPort: 6666
+  - name: "6667"
+    port: 6667
+    targetPort: 6667
+  - name: "8066"
+    port: 8066
+    targetPort: 8066
+  - name: "8067"
+    port: 8067
+    targetPort: 8067
+  - name: "8088"
+    port: 8088
+    targetPort: 8088
+  selector:
+    io.kompose.service: waarp-r66
+status:
+  loadBalancer: {}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: waarp-site1-etc
+  name: waarp-site1-etc
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 80Mi
+status: {}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: waarp-site1-data
+  name: waarp-site1-data
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 80Mi
+status: {}
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  creationTimestamp: null
+  labels:
+    io.kompose.service: waarp-site1-log
+  name: waarp-site1-log
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 80Mi
+status: {}
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
