--- a/kubernetes/waarp-r66-deployment.yaml
+++ b/kubernetes/waarp-r66-deployment.yaml
@@ -5,31 +5,28 @@ metadata:
   labels:
     io.kompose.service: waarp-r66
     app: waarp-r66
+    tiers: waarp-r66
   name: waarp-r66
 spec:
   ports:
-  - name: "6666"
+  - name: "xfer"
     port: 6666
     targetPort: 6666
-  - name: "6667"
+  - name: "xferssl"
     port: 6667
     targetPort: 6667
-  - name: "8066"
+  - name: "monwebui"
     port: 8066
     targetPort: 8066
-  - name: "8067"
+  - name: "adminwebui"
     port: 8067
     targetPort: 8067
-  - name: "8088"
+  - name: "apissl"
     port: 8088
     targetPort: 8088
   selector:
     io.kompose.service: waarp-r66
-    app: waarp-r66
-    tier: frontend
-  type: LoadBalancer
-status:
-  loadBalancer: {}
+  type: NodePort
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -45,6 +42,9 @@ spec:
   resources:
     requests:
       storage: 80Mi
+  selector:
+    matchLabels:
+      io.kompose.service: waarp-site1-etc
 status: {}
 ---
 apiVersion: v1
@@ -61,6 +61,9 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  selector:
+    matchLabels:
+      io.kompose.service: waarp-site1-data
 status: {}
 ---
 apiVersion: v1
@@ -77,6 +80,9 @@ spec:
   resources:
     requests:
       storage: 1Gi
+  selector:
+    matchLabels:
+      io.kompose.service: waarp-site1-log
 status: {}
 ---
 apiVersion: extensions/v1beta1
@@ -96,7 +102,7 @@ spec:
         app: waarp-r66
     spec:
       containers:
-      - image: fjudith/waarp-r66
+      - image: fjudith/waarp-r66:3.0.8
         name: waarp-r66
         env:
         - name: WAARP_APPNAME
@@ -113,7 +119,7 @@ spec:
         - name: WAARP_DATABASE_NAME
           value: site1-waarp
         - name: WAARP_DATABASE_USER
-          value: site1-waarp
+          value: waarp
         # $ kubectl create secret generic postgres-pass --from-file=postgres.password.txt
         # make sure postgres.password.txt does not have a trailing newline
         - name: WAARP_DATABASE_PASSWORD
@@ -122,7 +128,7 @@ spec:
               name: postgres-pass
               key: postgres.password.txt
         - name: WAARP_DATABASE_URL
-          value: jdbc:posgresql://waarp-r66-pg:5432/site1-waarp
+          value: jdbc:postgresql://waarp-r66-pg:5432/site1-waarp
         ports:
         - containerPort: 6666
           name: xfer
@@ -137,10 +143,13 @@ spec:
         volumeMounts:
         - mountPath: /etc/waarp
           name: waarp-site1-etc
+          subPath: etc
         - mountPath: /var/lib/waarp
           name: waarp-site1-data
+          subPath: data
         - mountPath: /var/log/waarp
           name: waarp-site1-log
+          subPath: log
       volumes:
       - name: waarp-site1-etc
         persistentVolumeClaim:
