--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,12 @@
 version: '2'
 volumes:
   waarp-site1-dblog:
-    external: true
-    driver: 'null'
   waarp-site1-etc:
-    external: true
-    driver: 'null'
   waarp-site1-log:
-    external: true
-    driver: 'null'
   waarp-site1-data:
-    external: true
-    driver: 'null'
   waarp-site1-db:
-    external: true
-    driver: 'null'
 services:
-  waarp-r66-pg:
+  postgres:
     image: postgres
     environment:
       POSTGRES_DB: site1-waarp
@@ -25,35 +15,6 @@ services:
     volumes:
     - waarp-site1-db:/var/lib/postgresql/data
     - waarp-site1-dblog:/var/log/postgresql
-  waarp-cifs:
-    image: fjudith/samba-join-ad
-    hostname: site1
-    environment:
-      ADMIN_SERVER: dc1.example.com dc2.example.com
-      AD_PASSWORD: Dj43l1ss.01
-      AD_USERNAME: fjudith
-      DOMAIN_NAME: example.com
-      LOG_LEVEL: '5'
-      TZ: Europe/Paris
-      WORKGROUP: EXAMPLE
-    stdin_open: true
-    dns_search:
-    - example.com
-    dns:
-    - 192.168.1.1
-    - 192.168.1.2
-    domainname: example.com
-    tty: true
-    links:
-    - waarp-r66:waarp-engine
-    ports:
-    - 137:137/tcp
-    - 137:137/udp
-    - 138:138/tcp
-    - 138:138/udp
-    - 139:139/tcp
-    - 445:445/tcp
-    - 445:445/udp
   waarp-r66:
     image: fjudith/waarp-r66:3.0.8
     environment:
@@ -64,7 +25,7 @@ services:
     - waarp-site1-data:/var/lib/waarp
     - waarp-site1-log:/var/log/waarp
     links:
-    - waarp-r66-pg:postgres
+    - postgres:postgres
     ports:
     - 6666:6666/tcp
     - 6667:6667/tcp
