--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   - docker logs waarp-r66
   # -i, --include – include protocol headers in the output (H/F)
   # -X, --request – specify request  COMMAND (GET, PUT, DELETE…)  to use
-  - docker exec waarp-r66 /bin/bash -c "curl -i http://localhost:8082"
+  - docker exec waarp-r66 /bin/bash -c "curl --insecure -X GET -i https://localhost:8082"
 
 
 after_success:
