--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ before_install:
   - docker-compose -f ./docker-compose.yml -p waarp1 up --build -d --force-recreate
   - docker-compose -f ./docker-compose.site2.yml -p waarp2 up --build -d --force-recreate
   - docker ps -a
+  - WAARP1_CONTAINERID=${docker ps -qa -f name="waarp1_waarp-r66_1"}
+  - WARRP2_CONTAINERID=${docker ps -qa -f name="waarp2_waarp-r66_1"}
 
 
 script:
@@ -27,8 +29,8 @@ script:
   - docker logs waarp-r66
   # -i, --include – include protocol headers in the output (H/F)
   # -X, --request – specify request  COMMAND (GET, PUT, DELETE…)  to use
-  - docker exec waarp-r66 /bin/bash -c "curl -i http://localhost:8066"
-  - docker exec waarp-r66 /bin/bash -c "curl -i http://localhost:8076"
+  - docker exec ${WAARP1_CONTAINERID} /bin/bash -c "curl -i http://localhost:8066"
+  - docker exec ${WAARP2_CONTAINERID} /bin/bash -c "curl -i http://localhost:8076"
 
 
 after_success:
