Fix escape character

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,8 @@ before_install:
   - docker-compose -f ./docker-compose.yml -p waarp1 up --build -d --force-recreate
   - docker-compose -f ./docker-compose.site2.yml -p waarp2 up --build -d --force-recreate
   - docker ps -a
-  - WAARP1_CONTAINERID=${docker ps -qa -f name="waarp1_waarp-r66_1"}
-  - WARRP2_CONTAINERID=${docker ps -qa -f name="waarp2_waarp-r66_1"}
+  - WAARP1_CONTAINERID=$(docker ps -qa -f name="waarp1_waarp-r66_1")
+  - WARRP2_CONTAINERID=$(docker ps -qa -f name="waarp2_waarp-r66_1")
 
 
 script:
