--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ before_install:
 script:
   # Wait for Waarp-R66 to start
   - sleep 20
-  - docker logs waarp-r66
+  - docker logs ${WAARP1_CONTAINERID} 
+  - docker logs ${WAARP2_CONTAINERID} 
   # -i, --include – include protocol headers in the output (H/F)
   # -X, --request – specify request  COMMAND (GET, PUT, DELETE…)  to use
   - docker exec ${WAARP1_CONTAINERID} /bin/bash -c "curl -i http://localhost:8066"
