--- a/deploy/docker/docker-compose.alpine.yml
+++ b/deploy/docker/docker-compose.alpine.yml
@@ -21,8 +21,8 @@ services:
       timeout: 30s
       retries: 3
   waarp-r66:
-    build: ./
-    image: fjudith/waarp-r66:3.0.9
+    build: ../alpine/
+    image: fjudith/waarp-r66:3.0.10-alpine
     environment:
       WAARP_ADMIN_PASSWORD: V3ry1nS3cur3P4ssw0rd
       WAARP_APPNAME: site2
