Do not create password for waarp user

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -8,7 +8,7 @@ RUN apk add wget xmlstarlet libxslt
 
 # Create waarp user
 RUN addgroup -g 499 waarp && \
-    adduser -s /bin/sh -G waarp -u 499 waarp
+    adduser -s /bin/sh -G waarp -u 499 waarp -D
 
 # Install Waarp Web administration UI
 RUN mkdir -p \
