fixed lib directory path

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -25,7 +25,7 @@ RUN cd /tmp/ && \
 	cd /
 
 # Add JDBC drivers
-RUN cd /usr/share/waarp/r66-lib/ && \
+RUN cd /usr/share/waarp/lib/ && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jre6.jar && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jre7.jar && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jar && \
