fixed script permision

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -66,6 +66,14 @@ RUN chown -R waarp:waarp \
  	/usr/share/waarp/ \
  	/var/lib/waarp/
 
+RUN chown +x \
+ 	/usr/bin/manager-send.sh \
+    /usr/bin/variables.sh \
+    /usr/bin/waarp-password.sh \
+    /usr/bin/waarp-pull.sh \
+    /usr/bin/waarp-r66server.sh \
+ 	/usr/bin/waarp-r66client.sh \
+
 USER waarp
 
 WORKDIR /usr/share/waarp
