Use archive directory structure

--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -17,20 +17,18 @@ RUN mkdir -p \
 
 RUN cd /tmp/ && \
 	curl -L https://dl.waarp.org/dist/waarp-r66/3.0/waarp-r66-${WAARP_R66_VERSION}-1.linux.tar.gz | tar xvzf - && \
-	cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/etc/* /etc/ && \
-    cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/share/* /usr/share/waarp/ && \
-    cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/bin/* /usr/bin/ && \
+	cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/* /usr/share/waarp/ && \
 	rm -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1 && \
 	cd /
 
 # Add JDBC drivers
-RUN cd /usr/share/waarp/lib/ && \
+RUN cd /usr/share/waarp/share/lib/ && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jre6.jar && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jre7.jar && \
 	curl -O https://jdbc.postgresql.org/download/postgresql-42.0.0.jar && \
 	cd /
 
-ENV R66_CLASSPATH="/usr/share/waarp/lib/WaarpR66-${WAARP_R66_VERSION}.jar:/usr/share/waarp/lib/*"
+ENV R66_CLASSPATH="/usr/share/waarp/share/lib/WaarpR66-${WAARP_R66_VERSION}.jar:/usr/share/waarp/share/lib/*"
 
 # Waarp configuration templatesls
 COPY assets/*.sh /usr/share/waarp/
@@ -38,7 +36,7 @@ RUN chmod 755 /usr/share/waarp/*.sh && \
 	echo "export TERM=xterm-256color" >> ~/.bashrc && \
 	echo ". /usr/share/waarp/init-commands.sh" >> ~/.bashrc
 
-ADD assets/certs/* /etc/certs/
+ADD assets/certs/* /usr/share/waarp/etc/certs/
 ADD assets/conf.d/ /tmp/conf.d/
 
 COPY docker-entrypoint.sh /
@@ -55,28 +53,12 @@ EXPOSE 8088
 
 # Create spool and flags directories and apply permission to waarp user
 RUN chown -R waarp:waarp \
- 	/usr/bin/manager-send.sh \
-    /usr/bin/variables.sh \
-    /usr/bin/waarp-password.sh \
-    /usr/bin/waarp-pull.sh \
-    /usr/bin/waarp-r66server.sh \
- 	/usr/bin/waarp-r66client.sh \
-    /etc/certs/ \
-    /etc/conf.d/ \
  	/usr/share/waarp/ \
  	/var/lib/waarp/
 
-# RUN chmod +x \
-#  	/usr/bin/manager-send.sh \
-#     /usr/bin/variables.sh \
-#     /usr/bin/waarp-password.sh \
-#     /usr/bin/waarp-pull.sh \
-#     /usr/bin/waarp-r66server.sh \
-#  	/usr/bin/waarp-r66client.sh
-
 USER waarp
 
-# WORKDIR /usr/share/waarp
+WORKDIR /usr/share/waarp
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
