--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -19,8 +19,8 @@ RUN mkdir -p \
 
 RUN cd /tmp/ && \
 	curl -L https://dl.waarp.org/dist/waarp-r66/3.0/waarp-r66-${WAARP_R66_VERSION}-1.linux.tar.gz | tar xvzf - && \
-	cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/bin/* /usr/share/waarp/ && \
-    cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/share/* /usr/share/waarp/ && \
+	cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/bin /usr/share/waarp/ && \
+    cp -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1/share /usr/share/waarp/ && \
 	rm -rf /tmp/waarp-r66-${WAARP_R66_VERSION}-1 && \
 	cd /
 
