--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -34,9 +34,7 @@ RUN cd /usr/share/waarp/share/lib/ && \
 ENV R66_CLASSPATH="/usr/share/waarp/share/lib/WaarpR66-${WAARP_R66_VERSION}.jar:/usr/share/waarp/share/lib/*"
 
 # Waarp configuration templatesls
-COPY assets/*.sh /usr/share/waarp/
-RUN chmod 755 /usr/share/waarp/*.sh && \
-	echo "export TERM=xterm-256color" >> ~/.bashrc && \
+RUN echo "export TERM=xterm-256color" >> ~/.bashrc && \
 	echo ". /usr/share/waarp/init-commands.sh" >> ~/.bashrc
 
 ADD assets/certs/* /usr/share/waarp/etc/certs/
