--- a/alpine/docker-compose.yml
+++ b/alpine/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       retries: 3
   waarp-r66:
     build: ./
-    image: fjudith/waarp-r66:3.0.10-alpine
+    image: fjudith/waarp-r66:alpine
     environment:
       WAARP_ADMIN_PASSWORD: V3ry1nS3cur3P4ssw0rd
       WAARP_APPNAME: site2
